k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: revrx
  labels:
    name: revrx
    app: revrx
